-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.137 2007-10-31 17:07:58 remko Exp $
-----------------------------------------------------------------------------------------

2007-10-31
	* gmt_proj.c:		Review of all inverse projections. Bug fixes:
				. -JS: Would set slice to NaN if central meridian was not Greenwich.
				. -JR: Longitudes beyond 180 were set to 180.
				Return NaN when longitude is more than 180 from central meridian:
				. Cylindrical and miscellaneous projections -J[IKNRW]
				Return NaN when point is out of map disc:
				. Azimuthal and miscellaneous projections -J[AEGHSV]
	* gmt_map.c (GMT_grd_project):		Now also wraps around longitude when
				GMT_IS_RECT_GRATICULE. Removed initialization with NaN.
	* grdimage.c:		Added -N option: do not clip image at map boundary.

2007-10-30
	* gmt_project.h:	project_info.[sn]_polar has become obsolete.
	* gmt_map.c:		---"---
	* gmt_proj.c:		Removed all singularities and discontinuities in inverse
				azimuthal projections

2007-10-28
	* guru/gmtguru.macros.orig:	Change to 4.2.2b
	* configure.in:		Deal with possibility of beta versions
	* src/makegmt.macros.in:	Removed VERSION (was confusing VERSION from guru)
	* grd2xyz.c:		For gridline oriented grids: grd2xyz -E returned xll and yll
				one cell too large. Now writing [xy]llcenter properly.
	* xyz2grd.c:		Assume pixel orientation when either [xy]llcenter is used.

2007-10-26	pwessel
	* psmask.c:		The -D option used the wrong output file name.

2007-10-25	remko
	* psy[z].txt:		Made sure that both say the same thing for the same options.
				Extended -M option with info on -G, -W, -Z (instead of at -G)

2007-10-22	pwessel
	* gmt_proj.c:		Added GMT_WIND_LON(lon) macro that handles periodicity
	* *.c:			Rachet up memory allocation exponentially rather than linearly.
	
2007-10-18	pwessel
	* spotter/hotspotter.c:	Added -S option to normalize output to percent of CVA maximum